# RustChess

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PERFORMANCE_GUIDE.md  README.md  build.rs  rustfmt.toml  tui_colors.toml
.cargo/: config.toml
benches/: alpha_beta_benchmark.rs  computer_vs_computer_benchmark.rs  count_positions_benchmark.rs  evaluation_benchmark.rs  move_generation_benchmark.rs  movegen_benchmark.rs  optimization_benchmark.rs  puzzle_benchmark.rs  pvp_benchmark.rs
build_helpers/: Cargo.toml
build_helpers/src/: lib.rs
common/: Cargo.toml
common/src/bitboard/: bitboard.rs  mod.rs  square.rs
precompile/: Cargo.toml
precompile/data/: opening_lines.txt
precompile/src/: lib.rs  main.rs
precompile/src/book/: book_generator.rs  mod.rs
precompile/src/magic/: find_magics.rs  mod.rs
precompile/src/random_number_generator/: mod.rs
precompile/src/zobrist/: mod.rs
scripts/: calculate-zobrist-tables.py
src/: bitboard.rs  board.rs  book.rs  evaluate.rs  game.rs  input_handler.rs  instrumentation.rs  lib.rs  main.rs  moves.rs  prelude.rs  searcher.rs
src/alpha_beta_searcher/: killer_moves.rs  mod.rs  prioritize_chess_moves.rs  search.rs  tests.rs  traits.rs  transposition_table.rs
src/bitboard/: bitboard.rs  color.rs  fen.rs  piece.rs  pieces.rs  square.rs  ui.rs
src/board/: bitboard.rs  board.rs  castle_rights.rs  color.rs  coordinate.rs  display.rs  error.rs  fen.rs  fullmove_number.rs  halfmove_clock.rs  magic.rs  mod.rs  move_info.rs  piece.rs  piece_set.rs  pieces.rs  position_info.rs  square.rs  state_stack.rs  tests.rs  ui.rs  zobrist.rs  zobrist_tables.rs
src/book/: book.rs  mod.rs
src/chess_move/: algebraic_notation.rs  capture.rs  castle.rs  chess_move.rs  chess_move_collection.rs  chess_move_effect.rs  en_passant.rs  mod.rs  pawn_promotion.rs  standard.rs  traits.rs
src/chess_search/: history_table.rs  implementation.rs  mod.rs  move_orderer.rs  tests.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: benchmark_alpha_beta.rs  calculate_best_move.rs  count_positions.rs  determine_stockfish_elo.rs  mod.rs  play.rs  pvp.rs  solve_puzzles.rs  uci.rs  util.rs  watch.rs
src/diagnostics/: memory_profiler.rs  mod.rs
src/evaluate/: bonus_tables.rs  evaluation.rs  evaluation_tables.rs  mod.rs  piece_values.rs
src/game/: action.rs  alpha_beta_benchmark.rs  command.rs  computer_vs_computer.rs  display.rs  engine.rs  game.rs  game_loop.rs  game_mode.rs  human_vs_computer.rs  input_source.rs  loop.rs  mod.rs  mode.rs  modes.rs  player_vs_player.rs  position_counter.rs  puzzle_suite.rs  renderer.rs  stockfish_elo.rs  stockfish_interface.rs  ui.rs  util.rs
src/input_handler/: fen.rs  fen_serialize.rs  input.rs  mod.rs
src/move_generation/: mod.rs  ray_table.rs  targets.rs
src/move_generator/: generator.rs  magic_table.rs  mod.rs  ray_table.rs  targets.rs
src/moves/: bitboard.rs  board.rs  chess_move.rs  debug.rs  fen.rs  mod.rs  ray_table.rs  rays.rs  targets.rs
src/searcher/: mod.rs
src/tui/: app.rs  board_widget.rs  mod.rs  theme.rs
src/uci/: command_parser.rs  mod.rs  protocol.rs  response_formatter.rs
