[package]
name = "chess"
version = "0.1.0"
authors = ["Cody Joseph Krainock <codykrainock@gmail.com>"]
edition = "2018"
build = "precompile/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
rand = "0.8.4"
termion = "1"
thiserror = "1.0"
structopt = "0.3"
fastrand = "1.6.0"
rustc-hash = "1.1.0"
log = "0.4.14"
env_logger = "0.9.0"
common = { path = "common" }

[build-dependencies]
precompile = { path = "precompile" }

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3
incremental = false

[profile.bench]
debug = true
lto = true
codegen-units = 1
opt-level = 3
incremental = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "count_positions_benchmark"
harness = false

[[bench]]
name = "alpha_beta_benchmark"
harness = false

[[bench]]
name = "pvp_benchmark"
harness = false
