[package]
name = "chess"
version = "1.0.0"
authors = ["Cody Joseph Krainock <cody@krainock.com>"]
edition = "2018"
build = "precompile/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.5", default-features = false, features = ["std"] }
once_cell = "1.19"
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
termion = "1"
thiserror = "1.0"
structopt = { version = "0.3", default-features = false }
fastrand = "1.6.0"
rustc-hash = "1.1.0"
log = "0.4.14"
env_logger = { version = "0.9.0", default-features = false, features = ["humantime"] }
common = { path = "common" }
lru = "0.12.3"
smallvec = "1.13.2"
rayon = "1.10.0"

[build-dependencies]
precompile = { path = "precompile" }

[profile.dev]
# Fast compilation for development iteration
opt-level = 0          # No optimization for fast compilation
debug = true           # Keep debug symbols
incremental = true     # Enable incremental compilation (default)

# Optimize dependencies slightly without affecting main crate compilation time
[profile.dev.package."*"]
opt-level = 1          # Basic optimization for dependencies only

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3
incremental = false

[profile.bench]
debug = true
lto = true
codegen-units = 1
opt-level = 3
incremental = false

[dev-dependencies]
criterion = "0.3"

[[bin]]
name="chess"
path="src/main.rs"

[[bench]]
name = "count_positions_benchmark"
harness = false

[[bench]]
name = "alpha_beta_benchmark"
harness = false

[[bench]]
name = "pvp_benchmark"
harness = false

[[bench]]
name = "move_generation_benchmark"
harness = false

[[bench]]
name = "optimization_benchmark"
harness = false
